@@ -1,5 +1,6 @@
 1.0rc2 - 1.0 final
 
+  - added: better volume control
   - added: view -> selection boxes
   - added: updated installer with associations seperate from plugin installs, thanks insomnia
   - added: theme editor dialog. File -> Theme Editor
